[package]
name = "starfish-sdk"
version = "1.0.0"
authors = ["husky <husky.robot.dog@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/StarfishGroup/starfish-sdk"
homepage = "https://github.com/StarfishGroup/starfish-sdk"
description = "海星SDK"
readme = "README.md"
exclude = [".vscode"]

# async
[dependencies.tokio]
version = "1.36.0"
features = ["full"]

[dependencies.futures]
version = "0.3.30"

[dependencies.async-trait]
version = "0.1.77"

# error
[dependencies.anyhow]
version = "1.0.75"
features = ["backtrace"]

# env
[dependencies.config]
version = "0.14.0"
optional = true

# serde
[dependencies.serde]
version = "1.0.197"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.114"

[dependencies.serde_with]
version = "3.6.1"

[dependencies.serde_urlencoded]
version = "0.7"

[dependencies.strum]
version = "0.26.1"
features = ["derive"]

# tracing
[dependencies.tracing]
version = "0.1.40"

[dependencies.tracing-subscriber]
version = "0.3.18"

[dependencies.tracing-appender]
version = "0.2.3"

# datatime
[dependencies.chrono]
version = "0.4.34"
features = ["serde"]

# http
[dependencies.reqwest]
version = "0.11.22"
default-features = false
features = ["rustls-tls", "json"]

# decimal
[dependencies.rust_decimal]
version = "1.34"

[dependencies.rust_decimal_macros]
version = "1.34"

# database
[dependencies.sea-orm]
version = "0.12.14"
features = ["sqlx-all", "runtime-tokio-rustls"]
optional = true

# snowflake
[dependencies.snowflaked]
version = "1.0.2"
features = ["sync"]
optional = true

# web
[dependencies.axum]
version = "0.7.2"
optional = true

[dependencies.tower-http]
version = "0.5.0"
features = ["trace"]
optional = true

# redis
[dependencies.bb8-redis]
version = "0.15.0"
optional = true

# system
[dependencies.num_cpus]
version = "1.16.0"

# encrypt
[dependencies.ring]
version = "0.17.8"
optional = true

[dependencies.base64]
version = "0.22.0"

# mongodb
[dependencies.mongodb]
version = "2.8.1"
features = ["bson-chrono-0_4", "bson-serde_with"]
optional = true

# influxdb
[dependencies.influxdb2]
version = "0.5.0"
default-features = false
features = ["rustls"]
optional = true


[features]
default = []
config = ["dep:config"]
database = ["dep:sea-orm"]
web = ["dep:axum", "dep:tower-http"]
redis = ["dep:bb8-redis"]
uuid = ["dep:snowflaked"]
encrypt = ["dep:ring"]
mongo = ["dep:mongodb"]
influx = ["dep:influxdb2"]
